# substrate-crowdfunding

./: .gitignore  Cargo.toml  README.md
runtime/: Cargo.toml
runtime/src/: funding_factory.rs  lib.rs
runtime/wasm/: Cargo.toml  build.sh
runtime/wasm/src/: lib.rs
src/: chain_spec.rs  main.rs  service.rs
substrate-crowdfunding/: Cargo.toml
substrate-crowdfunding-ui/: package-lock.json  package.json
substrate-crowdfunding-ui/src/: app.jsx
substrate-crowdfunding-ui/src/FundingCards/: FundingCards.css  index.jsx
substrate-crowdfunding-ui/src/FundingCards/avatars/: index.jsx
substrate-crowdfunding-ui/src/display/: TabCenter.js
substrate-crowdfunding-ui/src/display/allFundingTab/: AllFundingTab.js
substrate-crowdfunding-ui/src/display/common/: RequestRows.js
substrate-crowdfunding-ui/src/display/investedFundingTab/: InvestedFundingTab.js
substrate-crowdfunding-ui/src/display/ownedFundingTab/: OwnedFundingTab.js
substrate-crowdfunding/runtime/: Cargo.toml
substrate-crowdfunding/runtime/src/: funding_factory.rs  lib.rs  request.rs
substrate-crowdfunding/runtime/wasm/: Cargo.toml  build.sh
substrate-crowdfunding/src/: chain_spec.rs  main.rs  service.rs
