[profile.release]
panic = 'unwind'

[dependencies]
error-chain = '0.12'
exit-future = '0.1'
futures = '0.1'
hex-literal = '0.1'
log = '0.4'
parity-codec = '3.2'
parking_lot = '0.7.1'
tokio = '0.1'
trie-root = '0.12.0'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = '18b6e93fb98b7eac279b18945543fae4d21da6b4'

[dependencies.consensus]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura'
rev = '18b6e93fb98b7eac279b18945543fae4d21da6b4'

[dependencies.ctrlc]
features = ['termination']
version = '3.0'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = '18b6e93fb98b7eac279b18945543fae4d21da6b4'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = '18b6e93fb98b7eac279b18945543fae4d21da6b4'

[dependencies.substrate-crowdfunding-runtime]
path = 'runtime'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '18b6e93fb98b7eac279b18945543fae4d21da6b4'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = '18b6e93fb98b7eac279b18945543fae4d21da6b4'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = '18b6e93fb98b7eac279b18945543fae4d21da6b4'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = '18b6e93fb98b7eac279b18945543fae4d21da6b4'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = '18b6e93fb98b7eac279b18945543fae4d21da6b4'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = '18b6e93fb98b7eac279b18945543fae4d21da6b4'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
rev = '18b6e93fb98b7eac279b18945543fae4d21da6b4'

[[bin]]
name = 'substrate-crowdfunding'
path = 'src/main.rs'

[build-dependencies]
vergen = '3'

[package]
authors = ['Parity Technologies <admin@parity.io>']
build = 'build.rs'
edition = '2018'
name = 'substrate-crowdfunding'
version = '1.0.0'
