[dependencies.substrate-crowdfunding-runtime]
default-features = false
path = '..'

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'substrate-crowdfunding-runtime-wasm'
version = '1.0.0'

[lib]
crate-type = ['cdylib']

[workspace]
members = []
[profile.release]
lto = true
panic = 'abort'

[features]
default = []
std = ['substrate-crowdfunding-runtime/std']
